--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <br><br>
         <a href="plants.html"> Plants </a>
         <br><br><br>
-        <a href=""> Bedroom </a>
+        <a href="bedroom.html"> Bedroom </a>
         <br><br><br>
-        <a href=""> Ducks </a>
+        <a href="ducks.html"> Ducks </a>
         <br><br><br>
-        <a href=""> Living Room </a>
+        <a href="living room.html"> Living Room </a>
         <br><br><br>
-        <a href=""> Penguins </a>
+        <a href="penguins.html"> Penguins </a>
 
     </center>
     <script src="main.js"></script>
