--- a/living room.html
+++ b/living room.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-	<title>Plant Identification</title>
+	<title> Living Identification</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -15,13 +15,13 @@
 </head>
 <body background="background.webp">
     <center>
-    <h1 class="btn btn-primary heading"> Plant Identification</h1>
+    <h1 class="btn btn-primary heading">  Living Room Identification</h1>
     <br>
     <a href="index.html"> Back </a>
     <br><br>
     <h3 class="btn btn-success heading"></h3>
     <br>
-    <h3 class=" btn btn-success heading"> Out of 10 items 3 are detected</h3>
+    <h3 class=" btn btn-success heading"> Out of 10 items 2 are detected</h3>
     </center>
     <script src="main.js"></script>
 </body>
